# rust-webdav-client

./: .gitignore  CLAUDE.md  INSTALL-macOS.txt  README.md  README_EN.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.example.json
.github/workflows/: release.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  streaming.rs
src-tauri/src/commands/: app.rs  connection.rs  mod.rs  mount.rs  preview.rs
src-tauri/src/webdav/: client.rs  mod.rs  types.rs
src/lib/: api.ts  types.ts
src/lib/components/browser/: EmptyState.svelte  FileItem.svelte  FileList.svelte
src/lib/components/common/: ConfirmDialog.svelte  ContextMenu.svelte  MountsModal.svelte  SettingsModal.svelte  ToastContainer.svelte
src/lib/components/connection/: ConnectionForm.svelte
src/lib/components/layout/: Sidebar.svelte  TitleBar.svelte  Toolbar.svelte
src/lib/components/preview/: ImagePreview.svelte  OfficePreview.svelte  PreviewPanel.svelte  UnsupportedPreview.svelte  VideoPreview.svelte
src/lib/i18n/: de.json  en.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
src/lib/stores/: browser.svelte.ts  connections.svelte.ts  preview.svelte.ts  toast.svelte.ts  update.svelte.ts  version.ts
